--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "my-mothers-kitchen",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
