--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
+    "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
   },
   "scripts": {
