--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/system": "^4.11.3",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "query-string": "^7.0.0",
